<resources>
    <string name="app_name">IOT Next Gen</string>
    <string name="start_service">START SERVICE</string>
    <string name="stop_service">STOP SERVICE</string>
    <string name="landing_sreen_text">Press \"START SERVICE\" to start receiving updates</string>
    <string name="temp_tv">Temperature(in degree Celsius)</string>
    <string name="status_tv">Door Status</string>
    <string name="lastupdated_tv">Last Updated On</string>
    <string name="door_open">Open</string>
    <string name="door_closed">Closed</string>
    <string name="dash_dash">--</string>
</resources>
