<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ontosomething.arpit.iot.MainActivity">


    <Button

        android:id="@+id/bt_notif"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="5dp"
        android:background="@drawable/bt_notif"
        android:text="@string/start_service"
        android:textColor="@color/colorWhite" />

    <TextView
        android:id="@+id/tv_landing"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:gravity="center"
        android:maxLines="2"
        android:text="@string/landing_sreen_text" />

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/bt_notif"
        android:scrollbars="vertical"
        android:visibility="gone">

        <LinearLayout
            android:id="@+id/ll_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="60dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="60dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_doorStatus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center_horizontal"
                android:text="@string/dash_dash"
                android:textColor="@color/colorBlack"
                android:textSize="40sp" />

            <TextView
                android:id="@+id/tv_doorStatus_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/status_tv"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/tv_temp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center_horizontal"
                android:text="@string/dash_dash"

                android:textColor="@color/colorBlack"
                android:textSize="40sp" />

            <TextView
                android:id="@+id/tv_temp_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/temp_tv"
                android:textAppearance="?android:attr/textAppearanceSmall" />


            <TextView
                android:id="@+id/tv_updated"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center_horizontal"
                android:text="@string/dash_dash"
                android:textColor="@color/colorBlack"
                android:textSize="40sp" />

            <TextView
                android:id="@+id/tv_updated_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/lastupdated_tv"
                android:textAppearance="?android:attr/textAppearanceSmall" />


        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

</RelativeLayout>
